--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,3 +10,6 @@
 @use './utilities/form.scss';
 
 @forward './misc.scss';
+@forward './components/footer.scss';
+@forward './components/button.scss';
+@forward './components/modal.scss';
