--- a/styles/utilities/sizes.scss
+++ b/styles/utilities/sizes.scss
@@ -1,9 +1,9 @@
 @use '../mixins/breakpoints.scss' as *;
 
-$max-height: 100;
+$maxVal: 20;
 $step: 2;
 $fullable-types: h, w;
-$spacing-types: h, w, p, m;
+$spacing-types: h, w, p, m, px, py;
 
 @each $fullable in $fullable-types {
   .#{$fullable}-full {
@@ -18,9 +18,8 @@ $spacing-types: h, w, p, m;
 }
 
 @each $type in $spacing-types {
-
-  @for $i from 0 through $max-height {
-    @if $i % $step == 0 {
+  @for $i from 0 through $maxVal {
+    @if $i % $step == 0 and $i != 1 {
       $val: $i +'%';
 
       .#{$type}-#{$i} {
@@ -28,38 +27,35 @@ $spacing-types: h, w, p, m;
         @else if $type == w { width: #{$val} !important; }
         @else if $type == p { padding: #{$val} !important; }
         @else if $type == m { margin: #{$val} !important; }
+        @else if $type == px { padding-left: #{$val}; padding-right: #{$val}; }
+        @else if $type == py { padding-top: #{$val}; padding-bottom: #{$val}; }
+        
+        @else if $type == pr { padding-right: #{$val};}
+        @else if $type == pl { padding-left: #{$val};}
+        @else if $type == pb { padding-bottom: #{$val}; }
+        @else if $type == pt { padding-top: #{$val};}
       }
+ 
+    }
+  }
+}
 
-      // With breakpoint
-      @each $breakpoint,
-      $width in $breakpoints {
-        @include media-breakpoint-up($breakpoint) {
+// With breakpoint
+@each $breakpoint,
+$width in $breakpoints {
+  @include media-breakpoint-up($breakpoint) {
+
+    @each $type in $spacing-types {
+      @for $i from 0 through $maxVal {
+        @if $i % $step ==0 and $i !=1 {
+          $val: $i +'%';
           .#{$type}-#{$breakpoint}-#{$i} {
             @if $type == h { height: #{$val} !important; }
             @else if $type == w { width: #{$val} !important; }
             @else if $type == p { padding: #{$val} !important; }
             @else if $type == m { margin: #{$val} !important; }
-          }
-        }
-      }
-
-      // Viewport
-      .#{$type}-#{$i}-vh {
-        @if $type == h { height: #{$i}vh !important; }
-        @else if $type == w { width: #{$i}vh !important; }
-        @else if $type == p { padding: #{$i}vh !important; }
-        @else if $type == m { margin: #{$i}vh !important; }
-      }
-
-      // Viewport with breakpoint
-      @each $breakpoint,
-      $width in $breakpoints {
-        @include media-breakpoint-up($breakpoint) {
-          .#{$type}-#{$breakpoint}-#{$i}-vh {
-            @if $type == h { height: #{$i}vh !important; }
-            @else if $type == w { width: #{$i}vh !important; }
-            @else if $type == p { padding: #{$i}vh !important; }
-            @else if $type == m { margin: #{$i}vh !important; }
+            @else if $type == px { padding-left: #{$val}; padding-right: #{$val}; }
+            @else if $type == py { padding-top: #{$val}; padding-bottom: #{$val}; }
           }
         }
       }
