--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,8 +1,6 @@
-$primary: #39CDCC;
-$secondary: #213F7D;
-
-$accent-1: #213F7D1A;
-$accent-2: #545F7D;
+$primary: #031555;
+$secondary: #FFC107;
+$backgroundSecondary: #D9D9D9;
 
 $success: #39CD62;
 $danger: #E4033B;
