--- a/styles/mixins/breakpoints.scss
+++ b/styles/mixins/breakpoints.scss
@@ -1,11 +1,11 @@
 // Breakpoints
 
 $breakpoints: (
-  xs: 0,
+  // xs: 0,
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1200px
+  // xl: 1200px
 );
 
 @mixin media-breakpoint-up($breakpoint) {
