--- a/styles/utilities/form.scss
+++ b/styles/utilities/form.scss
@@ -5,6 +5,12 @@
   width: 100%;
   background-color: transparent;
   padding: 1.2rem 0 0.5rem 0;
+
+  .appended,
+  .prepended {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
 }
 
 .form-input {
@@ -15,44 +21,22 @@
   padding: 0.85rem;
   transition: all ease;
 
-  &:is(:focus, :active, :focus-visible){
+  &:is(:focus, :active, :focus-visible) {
     outline: 2px solid rgba(84, 95, 125, 0.15);
   }
-}
 
+}
 
 .form-append,
 .form-prepend {
+  @extend .form-input;
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.form-append .appended {
-  margin-left: 0.5rem;
-}
-
-.form-prepend .prepended {
-  margin-right: 0.5rem;
-}
-
-// Button
-.btn-primary {
-  background-color: cl.$primary;
-  color: white;
-
-  &:is(:hover, :focus){
-    background-color: white;
-    color: cl.$primary;
-  }
-}
-
-.btn-secondary {
-  background-color: cl.$secondary;
-  color: #FFFFFF;
-
-  &:is(:hover, :focus){
-    background-color: white;
-    color: cl.$secondary;
-  }
+.form-error {
+  font-size: x-small;
+  color: red;
 }
