--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -1,14 +1,20 @@
 @use '../colors.scss' as *;
 
-.btn.account {
-  background-color: $secondary;
-  border-radius: 0px;
-  border-bottom-left-radius: 15px;
-  border: none;
-}
+.btn {
+  &.account {
+    background-color: $secondary;
+    border-radius: 0px;
+    border-bottom-left-radius: 15px;
+    border: none;
+  }
 
-.btn.auth-btn {
-  @extend .account ;
+  &.auth-btn {
+    @extend .account;
 
-  border-radius: 0px;
+    border-radius: 0px;
+  }
+
+  &.disabled {
+    opacity: 0.5;
+  }
 }
