--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,3 +13,4 @@
 @forward './components/footer.scss';
 @forward './components/button.scss';
 @forward './components/modal.scss';
+@forward './components/categorycard.scss';
