--- a/styles/components/preferencecard.scss
+++ b/styles/components/preferencecard.scss
@@ -1,4 +1,4 @@
-.categoryCard {
+.categoryCard, .sourceCard {
   background-color: #EEE;
   margin: 5px;
   position: relative;
@@ -9,10 +9,12 @@
 
   button {
     border: 0;
-    padding: 1.2rem 1.2rem 1rem;
+    padding: 1rem;
     background-color: transparent;
     cursor: pointer;
     text-align: left;
+    width: 100%;
+    height: 100%;
   }
 
   p {
