--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,3 +14,4 @@
 @forward './components/button.scss';
 @forward './components/modal.scss';
 @forward './components/preferencecard.scss';
+@forward './components/feeds.scss';
