--- a/styles/components/feeds.scss
+++ b/styles/components/feeds.scss
@@ -7,7 +7,7 @@ hr.red {
 .feedsCard {
 
   .url {
-    text-decoration: none;
+    text-decoration: underline;
     margin-bottom: 2px;
     font-size: 1.1rem;
     color: currentColor;
@@ -24,11 +24,12 @@ hr.red {
   }
 
   .categories {
-    background-color: rgb(206, 123, 123);
+    background-color: rgb(153, 72, 72);
     width: fit-content;
     padding: 0.25rem 0.5rem;
     font-size: x-small;
     margin-bottom: 3px;
+    color: #fff;
   }
 
   .title,
@@ -43,6 +44,22 @@ hr.red {
 
 }
 
+.popularFeed {
+  height: 30vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: end;
+  display: flex;
+  padding: 0.5rem;
+
+  .feedsCard {
+    padding: 1rem 1.3rem; 
+    background-color: #EEE;
+    width: max-content;
+    max-width: 80vw;
+  }
+}
+
 @include media-breakpoint-up('md') {
   .feedsCard {
     .url {
@@ -55,4 +72,12 @@ hr.red {
     }
   }
 
+  .popularFeed {
+    height: 65vh;
+    background-size: cover;
+
+    .feedsCard {
+      max-width: 60vw;
+    }
+  }
 }
