--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,3 +15,4 @@
 @forward './components/modal.scss';
 @forward './components/preferencecard.scss';
 @forward './components/feeds.scss';
+@forward './components/loader.scss';
